# eduflow-backend

./: .gitignore  Cargo.toml  Containerfile  LICENSE  README.md
.github/workflows/: docker-image.yml
db_derive/: Cargo.toml
db_derive/src/: lib.rs
eduflow_derive/: Cargo.toml
eduflow_derive/src/: lib.rs
src/: auth_handler.rs  crypt.rs  data_handler.rs  db.rs  main.rs
src/auth_handler/: token_gen.rs
src/crypt/: crypt_provider.rs  crypt_types.rs
src/crypt/crypt_provider/: simple_crypt_prov.rs
src/data_handler/: course.rs  module.rs  objects.rs
src/db/: sql_helper.rs  sqlite.rs
test/bruno-test/: Delete Course.bru  Edit Course.bru  Get Course.bru  Hello World.bru  Login Request.bru  New Course.bru  New Module.bru  Register Request.bru  bruno.json  collection.bru
test/bruno-test/course/: Delete Course.bru  Edit Course.bru  Get Course.bru  New Course.bru  folder.bru
test/bruno-test/exam/: Delete Exam.bru  Edit Exam.bru  Get Exam.bru  New Exam.bru  folder.bru
test/bruno-test/login/: Login Request.bru  Logout.bru  Register Request.bru  Verify Token.bru
test/bruno-test/study_goal/: Delete Study Goal.bru  Edit Study Goal.bru  Get Study Goal.bru  New Study Goal.bru  folder.bru
test/bruno-test/todo/: Delete ToDo.bru  Edit ToDo.bru  Get ToDo.bru  New ToDo.bru  folder.bru
test/bruno-test/topic/: Delete Topic.bru  Edit Topic.bru  Get Topic.bru  New Topic.bru  folder.bru
