[package]
name = "eduflow-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# own dependencies
eduflow_derive = { path = "./eduflow_derive" }

# web server specific
axum = "0.8.4"
tower = "0.5.2"

# DB specific
rusqlite = { version = "0.35.0", features = ["bundled", "chrono"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.28.0"

# crypt & hashing
argon2 = "0.5.3"
rand = "0.9.1"
simple_crypt = "0.2.3"

# generall stuff
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
log = "0.4.27"
env_logger = "0.11.8"
chrono = { version = "0.4.41", features = ["serde"] }
